# newrag

./: .gitignore  .python-version  MIGRATION.md  config.example.yaml  dev.py  pyproject.toml  start_mcp.sh
document_ocr_pipeline/: process_pdf_vlm.py  refine_with_vlm.py
frontend/src/api/: admin.ts  documents.ts  permissions.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/pages/: AdminOrganizationsPage.tsx  AdminUsersPage.tsx  DocumentsPage.tsx  LoginPage.tsx  McpPage.tsx  StatsPage.tsx
frontend/src/utils/: auth.ts
newrag-mcp/: README.md  USAGE.md  index.ts  start-http-examp.sh  start.sh
schemas/: elasticsearch_mapping.json
scripts/: add_token_column_to_mcp_tokens.py  cleanup_all.py  init_auth_system.py  migrate_es_permissions.py  migrate_to_auth_system.py  migrate_to_version_control.py  reindex_with_permissions.py  test_search_permissions.py
src/: database.py  document_processor.py  vector_store.py
web/: app.py
web/dependencies/: __init__.py
web/handlers/: document_processor.py
web/middleware/: __init__.py  auth.py
web/routes/: auth_routes.py  document_routes.py
